--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@types/node": "^24.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "prisma": "^6.10.1"
   }
 }
