--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL="mysql://root:bashe@localhost:3306/bookstoreDB"
 PORT=8000
+secret_key=qbJLEYOB1iiSvxiIzirXXRie0TbYXGcG
+refresh_key=1vuGjpuZ7shHq1LVwFNqr5OcBwmsnYEa
