--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.10.1"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
