--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express": "^5.1.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "zod": "^4.0.5"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
