specifies schema.prisma location in package.json

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "zod": "^4.0.5"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "schema": "prisma/schema.prisma"
   }
 }
