--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^5.1.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "zod": "^4.0.5"
   },
   "prisma": {
